# operating-system

./: CMakeLists.txt  Makefile  README.md
src/bootloader/: main.asm  stage1.asm  stage2.asm
src/bootloader/legacy/: stage2.asm
